--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "sonarqube-scanner": "^2.5.0",
     "ts-node": "~4.1.0",
     "tslint": "^5.9.1",
     "typescript": "3.2.4"
