--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,21 @@ unit_tests:
     - npm install
     - npm test
 
+sonarqube:
+    stage: test
+#    only:
+#      - master
+    tags:
+      - nodejs
+    allow_failure: true
+    dependencies: []
+    variables:
+      CHROME_BIN: /usr/bin/google-chrome
+    script:
+      - npm install
+      - ng test --watch=false --code-coverage
+      - node sonar-analyse.ts
+
 ngbuild:
   stage: build
   tags:
