--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "is-docker": "^1.1.0",
     "material-design-icons": "^3.0.1",
     "ng2-charts": "^1.6.0",
-    "ngx-markdown": "^1.6.0",
+    "ngx-markdown": "^8.1.0",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.2.2",
     "tslib": "^1.9.0",
@@ -55,12 +55,12 @@
     "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.5",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^6.0.0",
     "ts-node": "~4.1.0",
     "tslint": "^5.9.1",
     "typescript": "3.2.4"
