Install ngrx-packages

--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@angular/platform-browser-dynamic": "9.0.2",
     "@angular/router": "9.0.2",
     "@angular/service-worker": "9.0.2",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "@stomp/ng2-stompjs": "^7.2.0",
@@ -46,6 +50,7 @@
     "@angular/compiler-cli": "^9.0.2",
     "@angular/language-service": "9.0.2",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
+    "@ngrx/schematics": "^8.6.0",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.11.1",
